2003-12-18  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_setbitmap): Fixed bug when using cyclic
	distribution and non-contiguous nodesets.

	* src/pdsh/main.c, src/pdsh/opt.c: Move mod_rcmd_exit() from main()
	into opt_free() since mod_rcmd_load() is called in opt_args().

2003-12-16  Albert Chu <chu11@llnl.gov>

	* src/qsnet/qshell.c (getcommon): Renamed to readchar.

	* src/qsnet/qshell.c (getint): Modified to not use readchar.  See
	comments for info why.

	* src/qsnet/qshell.c (qshell_conv): New function.

	* src/qsnet/qshell.c (pamauth): Modified to use new qshell_conv
	function.

	* src/qsnet/qshell.c (get_qshell_info): Added "\n" to end of all
	errlog messages.

	* src/qsnet/qshd.c (doauth, qshd_get_args): Made changes to
	support changes to pamauth.

	* src/qsnet/qshd.c (qshd_get_args): Fixed bug in which remuser
	buffer was being interpreted as the command buffer.

	* src/qsnet/mqshd.c (mqshell_get_args): Made changes to support
	changes to pamauth.

	* src/qsnet/qshell.h, src/qsnet/qshell.c (errorsock): Removed this
	unused function.
	
	* src/modules/mqcmd.c (mqcmd): Made error messages have more
	consistent wording.

2003-12-12  Albert Chu <chu11@llnl.gov>

	Upgraded mqshd daemon based on changes in the original mrshd
	daemon.
	
	* src/qsnet/mqshd.c (check_interfaces): Changed h_length parameter
	to addr_len.

	* src/qsnet/mqshd.c (check_munge_ip): New function.

	* src/qsnet/mqshd.c (mqshell_get_args): Use new check_munge_ip
	function.  Remove calls to gethostname and gethostbyname.
	getpwnam error now outputs "Permission Denied" instead of
	"Internal System Error".  Cleaned up code to be more similar to
	mrshd daemon code.

	Misc

	* src/modules/mqcmd.c (mqcmd): Added munge ctx for better error
	message.

	* src/modules/mcmd.c, src/modules/mqcmd.c: Re-worked code to have
	similar style to mcmd module from mrsh project, easing potential
	bug fixes later on.
	
2003-12-10  Mark Grondona <mgrondona@llnl.gov>
	